--- a/Terrain/.classpath
+++ b/Terrain/.classpath
@@ -9,5 +9,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="res"/>
+	<classpathentry kind="lib" path="lib/ShaderUtils.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
